# prismy-agent

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .python-version  Agent_Translate.docx  CHECKPOINT_2_LLM_TODO.md  COMPLETE_PROJECT_SUMMARY.md  Dockerfile  FINAL_PROJECT_STATUS.md  MANIFEST.in  PROJECT_READY.md  README.md  STRENGTHEN_COMPLETE.md  STRENGTHEN_PROGRESS.md  TEST_REPORT.md  add_logging_to_translation.py  add_transformation_workflow.py  api_keys.py  app.py  app_advanced_document_processing.py  app_advanced_document_processing.py.backup  app_advanced_document_processing_fixed.py  app_analytics_dashboard.py  app_modern_ui.py  app_smart_enhanced.py  app_ultra_modern.py  app_ultra_modern_fixed.py  app_ultra_modern_fixed_backup.py  app_ultra_modern_fixed_backup_1748568521.py  app_with_sdip.py  auto_cleanup.py  build.sh  cache_fix_test.txt  cache_test_final.txt  claude_response_handler.py  cleanup_list.txt  complete_ai_commander.py  connect_transformation_workflow.py  (+96 more)
.translation_cache/: 918df4f54e82ba682d5087eb032e1af7-En-Vietnamese-gpt-4.1.json  d4f0eb5bb8994a90c9e91e8b18004d12-En-Vietnamese-gpt-3.5-turbo-Chuẩn.json  d4f0eb5bb8994a90c9e91e8b18004d12-En-Vietnamese-gpt-3.5-turbo-Thô.json  d4f0eb5bb8994a90c9e91e8b18004d12-En-Vietnamese-gpt-4.1-mini-Chuẩn.json  d4f0eb5bb8994a90c9e91e8b18004d12-En-Vietnamese-gpt-4.1.json
analytics/: __init__.py  analytics_engine.py  dashboard_components.py
cache/: 2c7ecb21960e02f3480afab1915f155072c4f2ed7df3387ea98681e8f60de6fd_gpt-3.5-turbo_Vietnamese.pkl  (+3 more)
chunking/: chunk_combiner.py  layout_chunker.py  (+1 more)
(+219 files in other folders)
