[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translation-agent"
version = "2.0.0"
description = "Advanced Document Translation and Processing System"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.3.0", 
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.10.2",
    "PyPDF2>=3.0.0",
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1", 
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.1",
    "flake8>=6.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
